<resources>
    <string name="app_name">TipSmart</string>
    <string name="numPeople">Enter the Total Amount Of People Splitting</string>
    <string name="tipAmt">Please Enter The Desired Tip Amount</string>
    <string name="totalBill">Please Input The Total Bill</string>
    <string name="billExampe">00.00</string>
    <string name="buttonCalc">Calculate</string>
    <string name="counterPeople">1 People</string>
    <string name="counterTip">0%</string>
    <string name="dialog_text">Please Enter The Desired Tip</string>
    <string name="hint">25</string>
    <string name="cashPerPerson">$$$</string>
    <string name="each_pays">Each Pays:</string>
    <string name="tipHolder">$$$</string>
    <string name="total">Total</string>
    <string name="tipString">Tip :</string>
    <string name="grandTotalHolder">$$$</string>
    <string name="reset">Reset</string>
    <string name="image_contains_our_logo">Image Contains our Logo</string>
    <string name="_18Percent">18%</string>
    <string name="_20Percent">20%</string>
    <string name="_15Percent">15%</string>
    <string name="custom_tip">Custom Tip</string>
    <string name="custom_tipMain">Custom Tip</string>
</resources>
