<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="com.example.robert.tipsmart.MainActivity">

    <TextView
        android:text="@string/counterPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:id="@+id/tvSeekBarPeople"

        android:layout_alignTop="@+id/seekBarNumberOfPeople"
        android:layout_alignEnd="@+id/cbCustom"
        tools:fontFamily="sans-serif-smallcaps" />


    <CheckBox
        android:text="Custom Tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cbCustom"
        android:textColor="@color/colorWhite"
        android:buttonTint="@android:color/white"
        android:onClick="selectTip"
        android:layout_below="@+id/tvTip"
        android:layout_alignParentEnd="true"
        android:paddingBottom="16dp"
        android:layout_marginEnd="11dp"
        tools:fontFamily="sans-serif-smallcaps" />

    <ImageView
        android:id="@+id/myImage"
        android:src="@drawable/tipsmartapplogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:paddingBottom="16dp"
        android:layout_above="@+id/tvTotalBill"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/buttonCalc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/button"
        android:paddingBottom="16dp"
        android:onClick="sendMessage"
        android:layout_marginBottom="58dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/numPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvNumberOfPeople"
        android:textColor="@color/colorWhite"
        android:gravity="left"
        android:paddingBottom="16dp"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/tvSeekBarPeople"
        android:layout_centerHorizontal="true"
        tools:fontFamily="sans-serif-smallcaps"
        android:textStyle="bold" />

    <TextView
        android:text="@string/totalBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvTotalBill"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:layout_above="@+id/etBillAmt"
        android:layout_alignStart="@+id/cb15Percent"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorWhite"
        tools:fontFamily="sans-serif-smallcaps"
        android:textStyle="bold" />

    <CheckBox
        android:text="15%"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb15Percent"
        android:textColor="@color/colorWhite"
        android:buttonTint="@android:color/white"
        android:onClick="selectTip"
        android:paddingBottom="16dp"
        android:layout_marginBottom="35dp"
        android:layout_above="@+id/tvNumberOfPeople"
        android:layout_alignParentStart="true"
        tools:fontFamily="sans-serif-smallcaps"
        android:checked="false" />

    <TextView
        android:text="@string/tipAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:id="@+id/tvTip"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:layout_marginBottom="17dp"
        android:layout_above="@+id/cb18Percent"
        android:layout_centerHorizontal="true"
        tools:fontFamily="sans-serif-smallcaps"
        tools:textStyle="bold"
        android:textStyle="bold" />

    <CheckBox
        android:text="20%"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb20Percent"
        android:buttonTint="@android:color/white"
        android:textColor="@color/colorWhite"
        android:onClick="selectTip"
        android:paddingBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_alignBaseline="@+id/cbCustom"
        android:layout_alignBottom="@+id/cbCustom"
        android:layout_toStartOf="@+id/cbCustom"
        tools:fontFamily="sans-serif-smallcaps" />

    <CheckBox
        android:text="18%"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb18Percent"
        android:textColor="@color/colorWhite"
        android:buttonTint="@android:color/white"
        android:onClick="selectTip"
        android:paddingBottom="16dp"
        android:layout_marginStart="18dp"
        android:layout_alignBaseline="@+id/cb15Percent"
        android:layout_alignBottom="@+id/cb15Percent"
        android:layout_toEndOf="@+id/cb15Percent"
        tools:fontFamily="sans-serif-smallcaps" />

    <SeekBar
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:paddingBottom="16dp"
        android:id="@+id/seekBarNumberOfPeople"
        android:layout_marginBottom="34dp"
        android:layout_above="@+id/button"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:hint="@string/billExampe"
        android:textSize="12sp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:id="@+id/etBillAmt"
        android:textStyle="bold|italic"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:layout_above="@+id/tvTip"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
